--- a/wyy/package.json
+++ b/wyy/package.json
@@ -3,12 +3,14 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "vue-cli-service serve",
+        "dev": "vue-cli-service serve --open",
         "build": "vue-cli-service build",
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
         "core-js": "^3.6.5",
+        "sass": "^1.27.0",
+        "sass-loader": "^10.0.3",
         "vue": "^3.0.0",
         "vue-router": "^4.0.0-0",
         "vuex": "^4.0.0-0"
