--- a/wyy/package.json
+++ b/wyy/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "core-js": "^3.6.5",
+        "element-ui": "^2.13.2",
         "sass": "^1.27.0",
         "sass-loader": "^10.0.3",
         "vue": "^3.0.0",
