--- a/wyy/package.json
+++ b/wyy/package.json
@@ -12,6 +12,8 @@
         "element-ui": "^2.13.2",
         "sass": "^1.27.0",
         "sass-loader": "^10.0.3",
+        "style-loader": "^2.0.0",
+        "vant": "^3.0.7",
         "vue": "^3.0.0",
         "vue-router": "^4.0.0-0",
         "vuex": "^4.0.0-0"
@@ -24,6 +26,7 @@
         "@vue/cli-service": "~4.5.0",
         "@vue/compiler-sfc": "^3.0.0",
         "babel-eslint": "^10.1.0",
+        "babel-plugin-import": "^1.13.3",
         "eslint": "^6.7.2",
         "eslint-plugin-vue": "^7.0.0-0"
     }
